* Moved (most) R source files into the "R" directory.